Update page descriptions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,4 +45,9 @@ nav:
     - Arma 3: arma-3.md
     - Satisfactory: satisfactory.md
 
+extra:
+  social:
+    - icon: fontawesome/brands/discord
+    - link: https://discord.gg/f7Ah97P3Dt
 
+copyright: Copyright &copy; 2024 Black Nexus Technologies
