--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,6 @@ nav:
 extra:
   social:
     - icon: fontawesome/brands/discord
-    - link: https://discord.gg/f7Ah97P3Dt
+      link: https://discord.gg/f7Ah97P3Dt
 
 copyright: Copyright &copy; 2024 Black Nexus Technologies
